output/codegemma_temp1.0/modern_linkerd_003.yaml

apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default
  namespace: <your-namespace>
spec:
  selector: {}
  rules:
  - to:
    - services: ["*"]
    when:
    - subject:
        kind: ServiceAccount
        name: default
      action: Allow
  - to:
    - services: ["*"]
    when:
    - source:
        kind: ServiceAccount
        name: default
      action: Allow
